--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="intro" class="text-center mb-20 md:mb-28">
             <h2 class="text-3xl md:text-5xl font-bold mb-4">중소기업기술마켓, <br class="md:hidden"/>성장의 새로운 기회</h2>
             <p class="text-lg md:text-xl text-stone-600 max-w-3xl mx-auto mb-12">
-                공공기관이 직접 검증하고 구매까지 연계하는 신뢰도 높은 판로 플랫폼입니다.<br>기술력 있는 중소기업이 공공 시장을 넘어 글로벌로 진출할 수 있도록 지원합니다.
+                공공기관이 직접 기술을 검증하고 구매까지 연계하는 신뢰도 높은 판로 플랫폼입니다.<br>이를 통해 기술력 있는 중소기업은 공공 시장은 물론 글로벌 시장까지 진출할 기회를 얻을 수 있습니다.
             </p>
             <div class="bg-white p-8 rounded-xl shadow-md">
                 <h3 class="text-2xl font-bold mb-6 text-stone-700">주요 입점 가능 분야</h3>
@@ -106,7 +106,7 @@
         <section id="benefits" class="mb-20 md:mb-28">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">기업을 위한 <span class="text-blue-600">핵심 지원 혜택</span></h2>
             <p class="text-lg text-stone-600 text-center max-w-3xl mx-auto mb-12">
-                단순한 입점을 넘어, 기업의 실질적인 성장을 이끌어내는 다양한 혜택이 마련되어 있습니다.<br>국내 판로부터 해외 시장 개척까지, 기술마켓은 든든한 파트너 역할을 합니다.
+                단순한 입점을 넘어, 기업의 실질적인 성장을 이끌어내는 다양한 혜택이 마련되어 있습니다.<br>국내 판로부터 해외 시장 개척까지, 참여 기업에게는 든든한 성장 파트너가 되어줍니다.
             </p>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-sm hover:shadow-xl transition-shadow duration-300">
@@ -129,15 +129,15 @@
         </section>
 
         <section id="case-study" class="mb-20 md:mb-28">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">성공사례: <span class="text-blue-600">포시에스(이폼사인)</span></h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">성공사례: <br class="sm:hidden"><a href="https://www.eformsign.com/kr/index.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline hover:text-blue-700 transition-colors">이폼사인(eformsign)</a></h2>
             <p class="text-lg text-stone-600 text-center max-w-3xl mx-auto mb-12">
-                포시에스의 성공적인 기술마켓 활용 사례를 소개합니다.<br>아래 타임라인의 각 단계를 클릭하면 구체적인 성과 창출 과정을 확인하실 수 있습니다.
+                포시에스의 기술마켓 활용 사례를 소개합니다.<br>아래 타임라인의 각 단계를 클릭하면 구체적인 성과 창출 과정을 확인하실 수 있습니다.
             </p>
             <div class="bg-white rounded-xl shadow-md p-8 md:p-12">
                  <div class="mb-8">
                     <h3 class="text-xl font-bold text-stone-800">입점 배경</h3>
                     <p class="text-stone-600 mt-2">
-                        기술마켓 활성화를 위해 NIA가 입점 절차를 간소화한 것은 포시에스에게 좋은 기회가 되었습니다.<br>
+                        기술마켓 활성화를 위한 NIA(한국지능정보사회진흥원)의 홍보는 포시에스에게 좋은 기회가 되었습니다.<br>
                         포시에스는 기존 '디지털서비스몰' 검증 이력과 '우수연구개발 혁신제품' 지위를 바탕으로 신속하게 등록을 마칠 수 있었습니다.<br>
                         이는 기업이 축적한 역량과 신뢰도가 입점 과정에서 얼마나 중요한 자산이 되는지를 보여주는 사례입니다.
                     </p>
@@ -180,7 +180,7 @@
                     <div id="detail-3" class="timeline-detail hidden p-6 bg-stone-100 rounded-lg">
                         <h4 class="font-bold text-xl mb-2">최고의 기술력 공식 인정</h4>
                         <p>
-                            국내외 활동을 바탕으로 기술력을 공식적으로 인정받아, 기술마켓 경진대회에서 최종적으로 최우수상을 수상했습니다.<br>포상금 200만원과 표창패 수여를 통해 기업의 대외 신뢰도와 브랜드 가치를 한층 높일 수 있었습니다.
+                            국내외 활동을 바탕으로 기술력을 공식적으로 인정받아, 기술마켓 경진대회에서 최종적으로 최우수상을 수상했습니다.<br>포상금과 표창패 수여를 통해 기업의 대외 신뢰도와 브랜드 가치를 한층 높일 수 있었습니다.
                         </p>
                     </div>
                 </div>
