--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
 
         <section id="benefits" class="mb-20 md:mb-28">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">기업을 위한 <span class="text-blue-600">핵심 지원 혜택</span></h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 break-keep">기업을 위한 <br class="sm:hidden"><span class="text-blue-600">핵심 지원 혜택</span></h2>
             <p class="text-lg text-stone-600 text-center max-w-3xl mx-auto mb-12">
                 단순한 입점을 넘어, 기업의 실질적인 성장을 이끌어내는 다양한 혜택이 마련되어 있습니다.<br>국내 판로부터 해외 시장 개척까지, 참여 기업에게는 든든한 성장 파트너가 되어줍니다.
             </p>
