--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>중소기업기술마켓 활용 가이드 | 포시에스 성공사례</title>
+    <title>중소기업기술마켓 입점 및 활용 가이드</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Chosen Palette: Warm Neutrals -->
@@ -48,7 +48,7 @@
 
     <header id="header" class="bg-white/80 backdrop-blur-md sticky top-0 z-50 shadow-sm">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <h1 class="text-xl md:text-2xl font-bold text-blue-600">기술마켓 활용 가이드</h1>
+            <h1 class="text-lg md:text-xl font-bold text-blue-600">중소기업기술마켓 입점 및 활용 가이드</h1>
             <nav class="hidden md:flex space-x-8">
                 <a href="#intro" class="text-stone-600 hover:text-blue-600 transition-colors">소개</a>
                 <a href="#benefits" class="text-stone-600 hover:text-blue-600 transition-colors">핵심 혜택</a>
