--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </p>
             <div class="bg-white p-8 rounded-xl shadow-md">
                 <h3 class="text-2xl font-bold mb-6 text-stone-700">주요 입점 가능 분야</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 text-center">
                     <div class="flex flex-col items-center">
                         <span class="text-4xl mb-2">🏗️</span>
                         <p class="font-semibold">SOC</p>
@@ -93,6 +93,11 @@
                         <span class="text-4xl mb-2">💻</span>
                         <p class="font-semibold">ICT</p>
                         <p class="text-sm text-stone-500">S/W, H/W, 클라우드 등</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <span class="text-4xl mb-2">⚙️</span>
+                        <p class="font-semibold">범용기술</p>
+                        <p class="text-sm text-stone-500">기계, 소재, 화학 등</p>
                     </div>
                     <div class="flex flex-col items-center">
                         <span class="text-4xl mb-2">🤝</span>
