--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#intro" class="text-stone-600 hover:text-blue-600 transition-colors">소개</a>
                 <a href="#benefits" class="text-stone-600 hover:text-blue-600 transition-colors">핵심 혜택</a>
                 <a href="#case-study" class="text-stone-600 hover:text-blue-600 transition-colors">성공사례</a>
-                <a href="#how-to" class="text-stone-600 hover:text-blue-600 transition-colors">참여 방법</a>
+                <a href="#how-to" class="text-stone-600 hover:text-blue-600 transition-colors">입점 방법</a>
             </nav>
             <button id="mobile-menu-button" class="md:hidden text-stone-600">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -65,7 +65,7 @@
             <a href="#intro" class="block py-2 text-stone-600 hover:text-blue-600">소개</a>
             <a href="#benefits" class="block py-2 text-stone-600 hover:text-blue-600">핵심 혜택</a>
             <a href="#case-study" class="block py-2 text-stone-600 hover:text-blue-600">성공사례</a>
-            <a href="#how-to" class="block py-2 text-stone-600 hover:text-blue-600">참여 방법</a>
+            <a href="#how-to" class="block py-2 text-stone-600 hover:text-blue-600">입점 방법</a>
         </div>
     </header>
 
@@ -193,8 +193,8 @@
         </section>
 
         <section id="how-to">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">참여 방법 및 <span class="text-blue-600">고려사항</span></h2>
-            <p class="text-lg text-stone-600 text-center max-w-3xl mx-auto mb-12">기술마켓 참여를 위한 표준 절차와 성공적인 입점을 위해 미리 준비해야 할 사항은 다음과 같습니다.</p>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">입점 방법 및 <span class="text-blue-600">고려사항</span></h2>
+            <p class="text-lg text-stone-600 text-center max-w-3xl mx-auto mb-12">기술마켓 입점을 위한 표준 절차와 사전에 준비해야 할 주요 고려사항은 다음과 같습니다.</p>
             <div class="grid lg:grid-cols-2 gap-10">
                 <div class="bg-white p-8 rounded-xl shadow-md">
                     <h3 class="text-2xl font-bold mb-6">표준 입점 절차</h3>
